ckad-study-guide/app-a/ch07/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    tier: backend
  name: backend
spec:
  containers:
  - image: nginx
    name: backend
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
