ckad-study-guide/app-a/ch07/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    tier: frontend
  name: frontend
spec:
  containers:
  - image: nginx
    name: frontend
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
