ckad-study-guide/app-a/ch07/nginx-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-service
  name: nginx-service
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 80
  selector:
    tier: backend
    app: nginx
  type: NodePort
status:
  loadBalancer: {}
